overflow issue solved for animated forms

--- a/src/app/main-dashboard/add-new-user/add-new-user.component.css
+++ b/src/app/main-dashboard/add-new-user/add-new-user.component.css
@@ -69,3 +69,8 @@ like a tickmark */
 }
 
 /* Design for checkbox tick - END */
+.help-block{
+    color: red;
+    margin-left: 10px;
+}
+
